add script to generate wrapper automatically.